--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>decompress-unzip</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.3-SNAPSHOT</version>
     <name>decompress-unzip</name>
     <description>WebJar for decompress-targz</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>https://github.com/webjars/decompress-unzip</url>
         <connection>scm:git:https://github.com/webjars/decompress-unzip.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/decompress-unzip.git</developerConnection>
-        <tag>decompress-unzip-0.1.2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
